# HW_Turtle

./: .gitignore  RAPOR.md  README.md  generate_report_pdf.py  pyproject.toml  run.bat
data/: download_real_photos.py  generate_test_photos.py
data/real_photos/: metadata.json
src/turtle_id/: app.py  container.py
src/turtle_id/agents/: base_agent.py  config_agent.py  data_agent.py  image_agent.py  matching_agent.py  photo_validation_agent.py  ui_agent.py
src/turtle_id/core/models/: __init__.py  embedding.py  match_result.py  turtle.py
src/turtle_id/core/ports/: __init__.py  i_embedding_extractor.py  i_image_preprocessor.py  i_matcher.py  i_turtle_repository.py
src/turtle_id/core/use_cases/: register_turtle.py  verify_turtle.py
src/turtle_id/infrastructure/matching/: cosine_matcher.py
src/turtle_id/infrastructure/persistence/: __init__.py  database.py  models.py  sqlite_turtle_repo.py
src/turtle_id/infrastructure/vision/: opencv_preprocessor.py  timm_extractor.py  turtle_classifier.py
src/turtle_id/shared/: event_bus.py  events.py
src/turtle_id/ui/: main_window.py  workers.py
src/turtle_id/ui/styles/: main.qss
src/turtle_id/ui/views/: history_view.py  register_view.py  result_view.py  settings_view.py  verify_view.py
src/turtle_id/ui/widgets/: photo_picker.py  turtle_card.py
tests/: conftest.py
tests/integration/: test_repository.py
tests/unit/: test_event_bus.py  test_matcher.py  test_models.py  test_validation_agent.py
